<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filter.ui.filter.FilterFragment">

    <Toolbar
        android:id="@+id/tbSettingsFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetStartWithNavigation="0dp"
        android:minHeight="64dp"
        android:navigationIcon="@drawable/ic_arrow_back"
        android:title="@string/filter_title"
        android:titleTextAppearance="@style/Medium_22"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/filterInputLocationLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/margin20"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@id/tbSettingsFilter">

        <TextView
            android:id="@+id/tvLocationLabel"
            style="@style/Regular_16_Filter_Btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvLocationValue"
            android:layout_marginBottom="0dp"
            android:text="@string/filter_work_place"
            app:drawableRightCompat="@drawable/ic_arrow_forward"
            android:textColor="?attr/colorOnPrimary"
            app:drawableTint="?attr/colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@id/tvLocationValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvLocationValue"
            style="@style/Regular_16_Filter_Btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin8"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tvLocationLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/tvLocationClear"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin6"
            android:layout_marginEnd="@dimen/margin_negative10"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_cross"
            app:tint="?attr/colorOnPrimary" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/filterInputSectorLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/margin20"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        app:layout_constraintTop_toBottomOf="@id/filterInputLocationLayout">

        <TextView
            android:id="@+id/tvSectorLabel"
            style="@style/Regular_16_Filter_Btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvSectorValue"
            android:layout_marginBottom="0dp"
            android:text="@string/filter_sector"
            app:drawableRightCompat="@drawable/ic_arrow_forward"
            android:textColor="?attr/colorOnPrimary"
            app:drawableTint="?attr/colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@id/tvSectorValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSectorValue"
            style="@style/Regular_16_Filter_Btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin8"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tvSectorLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/tvSectorClear"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin6"
            android:layout_marginEnd="@dimen/margin_negative10"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_cross"
            app:tint="?attr/colorOnPrimary" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/flAmount"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginHorizontal="@dimen/margin16"
        android:layout_marginTop="@dimen/margin24"
        android:background="@drawable/filter_shape_rounded_edittext"
        android:hint="@string/filter_salary"
        android:paddingTop="@dimen/padding8"
        android:textColorHint="?attr/hint_text_c"
        app:boxBackgroundMode="none"
        app:expandedHintEnabled="false"
        app:hintTextAppearance="@style/Regular_12"
        app:hintTextColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/filterInputSectorLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSalary"
            style="@style/Regular_16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:hint="@string/filter_enter_amount"
            android:inputType="numberDecimal"
            android:lineSpacingExtra="8dp"
            android:padding="0dp"
            android:textColorHint="?attr/hint_text_c" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBox"
        style="@style/Regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24"
        android:background="@null"
        android:button="@null"
        android:drawableEnd="@drawable/filter_check_box_selector"
        android:paddingHorizontal="@dimen/padding16"
        android:text="@string/filter_only_with_salary"
        app:layout_constraintTop_toBottomOf="@id/flAmount" />

    <Button
        android:id="@+id/btFilterApply"
        style="@style/Medium_16_Filter_Btns"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/margin16"
        android:layout_marginBottom="@dimen/margin8"
        android:backgroundTint="@color/blue"
        android:text="@string/filter_apply"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/btFilterReset" />

    <Button
        android:id="@+id/btFilterReset"
        style="@style/Medium_16_Filter_Btns"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/margin16"
        android:layout_marginBottom="@dimen/margin24"
        android:text="@string/filter_reset"
        android:textColor="@color/red"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
