<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".filter.ui.sector.SectorFragment">

    <Toolbar
        android:id="@+id/tbSector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetStartWithNavigation="0dp"
        android:minHeight="64dp"
        android:navigationIcon="@drawable/ic_arrow_back"
        android:title="@string/sector_title"
        android:titleTextAppearance="@style/Medium_22" />

    <FrameLayout
        android:id="@+id/flSearch"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/margin16"
        android:layout_marginVertical="@dimen/margin8"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbSector">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin14"
            android:layout_marginEnd="60dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/sector_enter_sector"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="?attr/hint_text_c"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp"
            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="@dimen/margin4"
            android:src="@drawable/ic_search"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="@dimen/margin4"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSectors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/flSearch"
        tools:itemCount="5"
        tools:listitem="@layout/item_sector" />

    <Button
        android:id="@+id/btSelect"
        style="@style/Medium_16_Filter_Btns"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/margin16"
        android:backgroundTint="@color/blue"
        android:text="@string/location_select"
        android:layout_marginBottom="@dimen/margin22"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
